# samsampleX

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
benchmarks/: Snakefile  bench.def  config.yaml  multi-interval-benchmark.sh  results.tsv  single-interval-benchmark.sh
benchmarks/.snakemake/metadata/: SEcwMDE1Ny1jaHIyMS0xLTQ2NzA5OTgyLmJlZA==  SEcwMDIuR1JDaDM4LjMwMHgtY2hyMjEtMS00NjcwOTk4Mi5iYW0=  SEcwMDIuR1JDaDM4LjMwMHgtY2hyMjEtMS00NjcwOTk4Mi5iYW0uYmFp  Z2F0ay1jaGFpbmVkLmJhbQ==  Z2F0ay1jaGFpbmVkLmxvZw==  Z2F0ay1jb25zdGFudC1tZW1vcnkubG9n  Z2F0ay1oaWdoLWFjY3VyYWN5LmxvZw==  c2FtYmFtYmEuYmFt  c2FtYmFtYmEubG9n  (+4 more)
include/: samsampleX.h
samsampleX/: BoxcarMapper.py  BoxcarSampler.py  Bucket.py  Comparator.py  Intervals.py  Loader.py  Mapper.py  Plotter.py  Sampler.py  __main__.py  hlaSampler.py
samsamplex/: bed.py  cli.py  depth.py  mapback.py  metrics.py  plot.py  sample.py
src/: bed.c  bed.h  depth.c  depth.h  main.c  map.c  map.h  metrics.c  metrics.h  plot.c  plot.h  sample.c  sample.h  stats.c  stats.h  xxhash.h
subsample_reads/: FileHandler.py  Intervals.py  Loader.py  Plotter.py  __main__.py
test/: make_bam.py  test_comparator.py  test_filehandler.py  test_hlaSampler.py  test_intervals.py  test_loader.py  test_mapper.py  test_plotter.py  test_sampler.py
test/data/: test-100bp-10count.bam  test-100bp-10count.bam.bai  test-100bp-10count.bed
tests/: integration_tests.sh  test_bed.py  test_depth.c  test_depth.py  test_framework.h  test_metrics.c  test_metrics.py  test_parsing.c  test_plot.py  test_sample.py
