[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["samsampleX*"]

[project]
name = "samsampleX"
version = "0.1.0"
description = "Toolkit for mapping, non-uniform downsampling, and plotting BAM files"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pysam>=0.22.1",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "tqdm>=4.67.1",
    "intervaltree>=3.1.0",
]

[project.scripts]
samsampleX = "samsampleX.__main__:main"
